--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -102,7 +102,7 @@
     .cp-form-color-container {
         span.cp-form-palette {
             svg.lucide {
-                margin: @variables_icon_margin;
+                margin: 0.2rem;
             }
         }
         .is-hidden {
