create variables for icon values

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -68,8 +68,8 @@
         font: @colortheme_app-font;
 
         .lucide {
-            width: 1.2em;
-            height: 1.2em;
+            width: @variables_icon_width;
+            height: @variables_icon_height;
             margin-right: @variables_icon_margin;
         }
         .cp-checkmark {
