--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -28,8 +28,8 @@
     min-height: auto;
 
     .lucide {
-        width: 1.2em;
-        height: 1.2em;
+        width: @variables_icon_width;
+        height: @variables_icon_height;
         margin-right: @variables_icon_margin;
     }
     .cp-unselectable {
@@ -1075,8 +1075,8 @@
         margin: 0 1em;
         .btn.btn-danger {
             svg.lucide {
-                width: 1em;
-                height: 1em;
+                width: @variables_icon_width;
+                height: @variables_icon_height;
             }
         }
     }
