--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -52,8 +52,8 @@ body.html {
         border-radius: @variables_radius;
     }
     .lucide {
-        width: 1.2em;
-        height: 1.2em;
+        width: @variables_icon_width;
+        height: @variables_icon_height;
         margin-right: @variables_icon_margin;
     }
     border: 0;
