--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -12,8 +12,8 @@
 }
 & {
     .lucide {
-        width: 1.2rem;
-        height: 1.2rem;
+        width: @variables_icon_width;
+        height: @variables_icon_height;
         margin-right: @variables_icon_margin;
     }
     @notif-height: 50px;
