--- a/www/secureiframe/app-secure.less
+++ b/www/secureiframe/app-secure.less
@@ -33,8 +33,8 @@
     #cp-filepicker-dialog {
         display: none;
         .lucide {
-            height:1.2rem;
-            width: 1.2rem;
+            width: @variables_icon_width;
+            height: @variables_icon_height;
             margin-right: @variables_icon_margin;
         }
         .cp-modal {
