--- a/customize.dist/src/less2/include/variables.less
+++ b/customize.dist/src/less2/include/variables.less
@@ -25,3 +25,5 @@
 @variables_focus_style: @cryptpad_color_brand solid 2px;
 
 @variables_icon_margin: 0.5rem;
+@variables_icon_height: 1.2em;
+@variables_icon_width: 1.2em;
