--- a/www/pad/app-pad.less
+++ b/www/pad/app-pad.less
@@ -314,6 +314,9 @@ body.cp-app-pad {
                 margin-right: 20px;
             }
             margin-bottom: 20px;
+            svg {
+                margin: 0;
+            }
         }
         .cp-app-prop-content {
             margin-bottom: 0;
