edit load more history icons

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -116,6 +116,9 @@
                     outline: @variables_focus_style;
                     border-radius: @variables_radius;
                 }
+                .cp-loadmore-loading {
+                    animation: spin 10s linear infinite;
+                }
             }
             .cp-history-timeline-actions {
                 margin-left: 21px !important;
