spin loading icon

--- a/www/common/onlyoffice/app-oo.less
+++ b/www/common/onlyoffice/app-oo.less
@@ -31,9 +31,8 @@ body.cp-app-sheet, body.cp-app-doc, body.cp-app-presentation {
         display: flex;
         align-items: center;
         justify-content: center;
-        .fa {
-            font-size: 30px;
-            margin-right: 10px;
+        svg {
+            animation: spin 10s linear infinite;
         }
     }
 
