fix expand drive menu glitch

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -32,6 +32,10 @@
         height: @variables_icon_height;
         margin-right: @variables_icon_margin;
     }
+    .cp-icon-hidden > svg {
+        visibility: hidden;
+        position: absolute;
+    }
     .cp-unselectable {
         .tools_unselectable();
     }
