remove hardcoded code from translation key

--- a/customize.dist/src/less2/pages/page-register.less
+++ b/customize.dist/src/less2/pages/page-register.less
@@ -122,7 +122,9 @@
         #ssoForm {
             margin-top: 15px;
         }
-
+        h2 {
+            padding-left: 30px;
+        }
         .cp-register-notes {
             ul.cp-notes-list {
                 list-style: none;
@@ -131,12 +133,6 @@
                 position: relative;
                 li {
                     margin-bottom: 10px;
-                    &::before {
-                        position: absolute;
-                        left: 0;
-                        font-family: "FontAwesome";
-                        content: "\f071";
-                    }
                     .red {
                         background-color: @cp_static-danger;
                     }
