--- a/www/notifications/app-notifications.less
+++ b/www/notifications/app-notifications.less
@@ -150,6 +150,9 @@
                     border-left: 1px solid @cp_notif-table-border;
                     width: 3rem;
                     margin: 0.2rem;
+                    svg {
+                        margin: 0;
+                    }
                     &:focus-visible{
                         border-radius: @variables_radius;
                     }
