Fix settings loading icon

--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -117,6 +117,10 @@
                     padding-right: 1rem;
                     padding-bottom:0.5rem;
                 }
+                svg {
+                    display: inline-block;
+                    margin-bottom: 0.5rem;
+                }
             }
 
             .cp-password-container {
