Fix styling for drive search spinner

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -272,11 +272,10 @@
         color: @cp_drive-fg;
         align-items: center;
         justify-content: center;
-        animation: spin 10s linear infinite;
         svg {
             height: 2rem;
             width: 2rem;
-            margin: 0;
+            margin-bottom: 1.5rem;
         }
     }
     .cp-app-drive-search-noresult {
