--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -84,6 +84,9 @@
                 outline: @variables_focus_style;
             }
         }
+        svg {
+            margin: 0;
+        }
         button:nth-of-type(1) {
             margin-left: 0.2rem;
         }
@@ -96,7 +99,7 @@
     .toolbar_button {
         height: @toolbar_line-height;
         box-sizing: border-box;
-        padding: 3px 7px;
+        padding: 5px 7px;
         margin: 0;
         transition: all 0.15s;
         .tools_unselectable();
