center template container

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -347,7 +347,7 @@
                 width: 100%;
                 //flex: 1 0 auto;
                 flex-wrap: nowrap;
-                justify-content: space-between;
+                justify-content: center;
                 .cp-creation-template-more {
                     margin: 0 5px;
                     text-align: center;
