render notification icons

--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -33,9 +33,7 @@
                 margin: 0;
             }
             .cp-broadcast {
-                display: flex;
-                align-items: center;
-                margin: 0 0.5rem;
+                margin: 0.5rem;
                 width: 2rem;
                 height: 2rem;
                 color: @cp_dropdown-fg;
@@ -59,8 +57,9 @@
                 }
             }
             .cp-notification-content {
+                display: flex;
                 flex: 1;
-                align-items: stretch;
+                align-items: center;
                 min-width: 0;
                 p {
                     word-break: break-word;
