--- a/customize.dist/src/less2/pages/page-install.less
+++ b/customize.dist/src/less2/pages/page-install.less
@@ -66,6 +66,9 @@
                     padding-right: 10px;
                 }
             }
+            h2 {
+                padding-left: 30px;
+            }
             h3 {
                 font-weight: 700;
                 margin-bottom: 1em;
@@ -112,12 +115,6 @@
                 position: relative;
                 li {
                     margin-bottom: 10px;
-                    &::before {
-                        position: absolute;
-                        left: 0;
-                        font-family: "FontAwesome";
-                        content: "\f071";
-                    }
                     .red {
                         background-color: @cp_static-danger;
                     }
