update onboarding icons style

--- a/customize.dist/src/less2/include/admin.less
+++ b/customize.dist/src/less2/include/admin.less
@@ -58,8 +58,8 @@
                 cursor: pointer;
             }
             .cp-icon {
-                height: 2.8rem;
-                width: 2.8rem;
+                min-height: 2.8rem;
+                min-width: 2.8rem;
             }
             .cp-app-name {
                 flex-grow: 1;
