--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -280,6 +280,9 @@
                         &:hover {
                             opacity: 0.7;
                         }
+                        svg {
+                            margin: 0;
+                        }
                     }
                 }
                 img {
