Update kanban delete tag icon + add icon for it

--- a/customize.dist/src/less2/include/tokenfield.less
+++ b/customize.dist/src/less2/include/tokenfield.less
@@ -101,6 +101,11 @@
                 &:hover {
                     color: contrast(@cp_token-fg, darken(@cp_token-fg, 10%), lighten(@cp_token-fg, 10%));
                 }
+                svg {
+                    width: 1rem;
+                    height: 1rem;
+                    margin: 0;
+                }
             }
         }
         .token-input {
