update hover style for password reveal icon

--- a/customize.dist/src/less2/include/password-input.less
+++ b/customize.dist/src/less2/include/password-input.less
@@ -16,13 +16,7 @@
             flex: 1;
             min-width: 0;
         }
-        .fa {
-            width: 30px;
-            height: 30px;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
+        svg {
             &:hover {
                 color: darken(@cryptpad_color_brand, 10%);
             }
