Refactor spinners for teams

--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -45,6 +45,12 @@
         }
     }
 
+    .cp-spinner, .cp-ok {
+        svg {
+            margin: 0.5rem;
+        }
+    }
+
     #cp-sidebarlayout-container {
         @media screen and (max-width: 900px) {
             .cp-app-drive-toolbar-leftside {
