fix notification icon style

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -782,13 +782,8 @@
                 font-size: 1em;
                 height: @toolbar_top-height - 10px;
                 border-radius: @variables_radius;
-                padding: 0px;
+                padding: 0;
                 margin: 0;
-                &::before {
-                    width: 100%;
-                    text-align: center;
-                    padding-top: 4px;
-                }
                 &:hover {
                     border-color: transparent;
                     background-color: @cp_toolbar-fade1;
