remove fa occurences

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -208,7 +208,7 @@
                         text-decoration: none;
                     }
                 }
-                .cp-usergrid-user, textarea, a, .fa-times {
+                .cp-usergrid-user, textarea, a {
                     outline: none;
                     &:focus-visible {
                         outline: @variables_focus_style;
