remove fa occurences

--- a/customize.dist/src/less2/include/icons.less
+++ b/customize.dist/src/less2/include/icons.less
@@ -51,7 +51,7 @@
         }
         &.cp-app-disabled {
             cursor: not-allowed !important;
-            .fa, .cptools { cursor: not-allowed !important; }
+            svg { cursor: not-allowed !important; }
             opacity: 0.5;
         }
     }
