--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -43,9 +43,8 @@
     }
     .cp-support-attachments {
         display: flex;
-        .fa {
+        svg {
             cursor: pointer;
-            margin-right: 10px;
         }
         &> span {
             border: 1px solid @fromme-bg;
