remove fa occurences

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -321,7 +321,7 @@
                 }
             }
 
-            .fa-question-circle { // help links to Docs
+            .lucide-circle-question-mark { // help links to Docs
                 color: @cp_alertify-fg;
                 &:hover {
                     text-decoration: none;
