--- a/customize.dist/src/less2/include/usergrid.less
+++ b/customize.dist/src/less2/include/usergrid.less
@@ -120,7 +120,7 @@
                     color: @cp_usergrid-selected-fg;
                 }
             }
-            .fa-times {
+            .lucide-x {
                 border-radius: @variables_radius;
                 margin-left: 5px;
                 cursor: pointer;
