--- a/www/debug/app-debug.less
+++ b/www/debug/app-debug.less
@@ -69,7 +69,7 @@
                 background-color: @cp_debug-hover;
             }
         }
-        .fa-chevron-left, .fa-chevron-right {
+        .lucide-chevron-left, .lucide-chevron-right {
             margin: 5px 20px;
             cursor: pointer;
             &:hover {
