--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -87,7 +87,7 @@
                         border: 0;
                         margin-right: 2px;
                     }
-                    .fa-paper-plane{
+                    svg {
                         border-radius: @variables_radius;
                     }
                 }
@@ -340,10 +340,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        .fa {
-            font-size: 30px;
-            margin-right: 10px;
-        }
     }
 
     .cp-teams-invite-uses {
