Add the stroke width styling

--- a/customize.dist/src/less2/include/contextmenu.less
+++ b/customize.dist/src/less2/include/contextmenu.less
@@ -74,6 +74,10 @@
                 }
             }
         }
+        li.dropdown-submenu > ul.dropdown-menu li > a.dropdown-item > svg.lucide {
+            vector-effect: non-scaling-stroke;
+            stroke-width: 1.7;
+        }
         .cp-app-drive-context-noAction {
             font-style: italic;
             color: @cp_context-disabled;
