--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -947,6 +947,8 @@
             li, li svg.lucide {
                 cursor: pointer;
                 border-radius: @variables_radius;
+                stroke-width: 1.7;
+                vector-effect: non-scaling-stroke;
                 &:focus {
                     outline: @cryptpad_color_brand solid 2px;
                 }
