--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -837,8 +837,12 @@
                     height: 3rem;
                     width: 3rem;
                     margin: 0;
+                    stroke-width: 3;
                 }
 
+                .lucide * {
+                    vector-effect: non-scaling-stroke;
+                }
                 // svg {
                 //     #outline, #squares {
                 //         fill: @toolbar-bg-color;
