--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -115,6 +115,9 @@
                     & > span:hover {
                         color: @msg-color-hover;
                     }
+                    svg {
+                        margin-right: 0.1rem;
+                    }
                 }
             }
             span.cp-badge {
