--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -256,6 +256,9 @@
             justify-content: space-between;
             align-items: center;
             height: 50px;
+            svg {
+                margin-right: 0;
+            }
 
             .hover () {
                 height: 100%;
