--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -179,6 +179,9 @@
         display: flex;
         align-items: center;
         color: @cp-profile-is-your-friend;
+        svg {
+            margin: 0.1rem 0 0 0;
+        }
     }
     .cp-app-profile-friend-request {
         flex: 0;
