Fix comments icons in richtext

--- a/customize.dist/src/less2/include/comments.less
+++ b/customize.dist/src/less2/include/comments.less
@@ -70,6 +70,11 @@
         button:not(:last-child) {
             margin-right: 5px;
         }
+        svg {
+            width: 1rem;
+            height: 1rem;
+            margin-right: 0.35rem;
+        }
     }
 
     .cp-comment-container {
@@ -90,6 +95,11 @@
         };
         &:last-child {
             margin-bottom: 10px;
+        }
+        svg {
+            width: 1rem;
+            height: 1rem;
+            margin-right: 0.35rem;
         }
     }
     .cp-comment {
