update icon variables

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -368,8 +368,8 @@
                     }
                     svg {
                         margin: 0;
-                        height: 1.5rem;
-                        width: 1.5rem;
+                        width: @variables_icon_width;
+                        height: @variables_icon_height;
                     }
                 }
             }
