--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -294,8 +294,8 @@ body.html {
             display: flex;
             align-items: center;
             img {
-                width: 1.3em;
-                height: 1.3em;
+                width: @variables_icon_width;
+                height: @variables_icon_height;
                 margin-right: 10px;
             }
             &.cp-back-home {
