--- a/customize.dist/src/less2/include/tokenfield.less
+++ b/customize.dist/src/less2/include/tokenfield.less
@@ -102,8 +102,8 @@
                     color: contrast(@cp_token-fg, darken(@cp_token-fg, 10%), lighten(@cp_token-fg, 10%));
                 }
                 svg {
-                    width: 1rem;
-                    height: 1rem;
+                    width: @variables_icon_width;
+                    height: @variables_icon_height;
                     margin: 0;
                 }
             }
