--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -28,7 +28,7 @@
     }
     .cp-spinner, .cp-ok {
         svg {
-            margin: 0.5rem;
+            margin: @variables_icon_margin;
         }
     }
 
@@ -116,7 +116,7 @@
                     padding-bottom:0.5rem;
                 }
                 svg {
-                    margin: 0 0 0.5rem;
+                    margin: 0 0 @variables_icon_margin;
                 }
             }
 
