--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -47,7 +47,7 @@
 
     .cp-spinner, .cp-ok {
         svg {
-            margin: 0.5rem;
+            margin: @variables_icon_margin;
         }
     }
 
