--- a/customize.dist/src/less2/pages/page-index.less
+++ b/customize.dist/src/less2/pages/page-index.less
@@ -300,7 +300,8 @@
             svg {
                 font-size: inherit;
                 padding: 0;
-                width: 1em;
+                width: @variables_icon_width;
+                height: @variables_icon_height;
                 padding-left: 5px;
             }
         }
