--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -661,8 +661,6 @@
             .cp-toolbar-title-edit, .cp-toolbar-title-save {
                 display: flex;
                 align-items: center;
-                font-size: 20px;
-                vertical-align: middle;
                 border-radius: 0 @variables_radius @variables_radius 0;
             }
             .cp-toolbar-title-readonly {
@@ -709,8 +707,8 @@
                 border: 1px solid transparent;
                 padding: 0 5px;
                 border-collapse: collapse;
-                span {
-                    cursor: pointer;
+                svg {
+                    margin: 0;
                 }
             }
             .cp-toolbar-title-save {
@@ -719,8 +717,8 @@
                 cursor: pointer;
                 padding: 5px;
                 border-collapse: collapse;
-                span {
-                    cursor: pointer;
+                svg {
+                    margin: 0;
                 }
             }
             .cp-toolbar-title-value {
